All entries now show your own name too.

--- a/ploggy/index.html
+++ b/ploggy/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="stat">
-                    <span class="glyphicon glyphicon-hourglass" aria-hidden="true"> </span> <span class="stat-val">4 / 8</span> <span class="stat-name">days passed (50.0%)</span>
+                    <span class="glyphicon glyphicon-hourglass" aria-hidden="true"> </span> <span class="stat-val">8 / 8</span> <span class="stat-name">days passed (100.0%)</span>
                 </div>
 
                 <div class="stat wide">
@@ -41,7 +41,7 @@
             </div>
 
             <div class="stats-day-progress">
-                <div class="stats-day-progress-bar light" style="width: 50.0%;"></div>
+                <div class="stats-day-progress-bar light" style="width: 100.0%;"></div>
             </div>
 
             <div class="stats-day-progress">
@@ -59,7 +59,7 @@
             </div>
 
             <div class="persons">
-                <span class="person" data-nick="plo">Ploggy Logger <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span>
+                <span class="person" data-nick="tca">Thom Castermans <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span> <span class="person" data-nick="plo">Ploggy Logger <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span>
             </div>
         </div>
 
@@ -85,7 +85,7 @@
             </div>
 
             <div class="persons">
-                <span class="person" data-nick="plo">Ploggy Logger <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span>
+                <span class="person" data-nick="tca">Thom Castermans <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span> <span class="person" data-nick="plo">Ploggy Logger <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span>
             </div>
         </div>
 
@@ -98,7 +98,9 @@
                 <p>Worked on Ploggy a bit.</p>
             </div>
 
-            <div class="persons"></div>
+            <div class="persons">
+                <span class="person" data-nick="tca">Thom Castermans <span class="glyphicon glyphicon-user" aria-hidden="true"> </span></span>
+            </div>
         </div>
 
         <div class="footer">
