Project time is now more accurate.

--- a/ploggy/index.html
+++ b/ploggy/index.html
@@ -32,16 +32,16 @@
                 </div>
 
                 <div class="stat">
-                    <span class="glyphicon glyphicon-hourglass" aria-hidden="true"> </span> <span class="stat-val">8 / 8</span> <span class="stat-name">days passed (100.0%)</span>
+                    <span class="glyphicon glyphicon-hourglass" aria-hidden="true"> </span> <span class="stat-val">13 / 8</span> <span class="stat-name">days passed (162.5%)</span>
                 </div>
 
                 <div class="stat wide">
-                    <span class="glyphicon glyphicon-time" aria-hidden="true"> </span> <span class="stat-val">17 hours and 30 minutes</span> <span class="stat-name">spent (27.3%)</span>
+                    <span class="glyphicon glyphicon-time" aria-hidden="true"> </span> <span class="stat-val">2 days, 1 hour and 30 minutes</span> <span class="stat-name">spent (27.3%)</span>
                 </div>
             </div>
 
             <div class="stats-day-progress">
-                <div class="stats-day-progress-bar light" style="width: 100.0%;"></div>
+                <div class="stats-day-progress-bar light" style="width: 162.5%;"></div>
             </div>
 
             <div class="stats-day-progress">
